# erpl-idoc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TELEMETRY.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
assets/: erpl_idoc_demo.tape
packaging/: description.yml
scripts/: export_idoc_dict.sh  gen_idoc_corpus.sh
sql/: dict_helpers.sql  sap_idoc_dictionary.sql  write_idoc_typed.sql
src/: erpl_idoc_extension.cpp  idoc_copy.cpp  idoc_dict.cpp  idoc_encoder.cpp  idoc_macros.cpp  idoc_reader.cpp  idoc_typed_reader.cpp  idoc_xml_funcs.cpp
src/idoc/: idoc_format.cpp  idoc_xml.cpp  idoc_xml.hpp
src/include/: erpl_idoc_extension.hpp  idoc_dict_source.hpp  idoc_doc.hpp  idoc_format.hpp  idoc_functions.hpp  idoc_multifile.hpp
test/cpp/: test_idoc_format.cpp  test_idoc_stream.cpp  test_idoc_xml.cpp
test/e2e/: e2e_common.sh  m2_dictionary.sh  m3_typed_read.sh  m4_inbound.sh  m5_export_dict.sh  m6_macro_dict.sh  m7_xml_inbound.sh
test/e2e/abap/: zcl_erpl_idoc_e2e.abap  zcl_erpl_idoc_gen.abap  zcl_erpl_idoc_toxml.abap
test/fixtures/: flight.idoc  flight.xml  flight_dict.csv  truncated.idoc
test/sql/: idoc_dict_functions.test  idoc_dict_helpers.test  idoc_dictionary.test  idoc_macros.test  idoc_multifile.test  idoc_read.test  idoc_read_fields.test  idoc_roundtrip.test  idoc_security.test  idoc_smoke.test  idoc_typed_read.test  idoc_typed_write.test  idoc_variants.test  idoc_xml.test
